docs/css/custom.css
:root {
  --navbar-height: 80px;
}

body {
  color: #666666;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  overflow-wrap: anywhere;
  overflow-x: auto;
  padding-bottom: 20px;
  padding-top: var(--navbar-height);
}

a {
  background: transparent;
  color: #2fa4e7;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #157ab5;
  text-decoration: underline;
}

.navbar {
  border-radius: 0;
  z-index: 9999;
  transition: none !important;
  height: var(--navbar-height);
}

/*
Any element with an id attribute can be scrolled to via the URL hash fragment.
But since the navbar is fixed at the top, elements will, by default, get hidden
by the navbar. To prevent this, we make sure that there's a margin above these
links.
*/
*[id] {
  scroll-margin-top: var(--navbar-height);
}

.navbar .nav-item:hover .dropdown-menu,
.navbar .nav-item .dropdown-menu,
.navbar .dropdown-menu.fade-down,
.navbar-toggler,
.collapse,
.collapsing {
  transition: none !important;
  transform: none !important;
}

@media all and (min-width: 992px) {
  .navbar .nav-item .dropdown-menu {
    display: block;
    opacity: 0;
    visibility: hidden;
    transition: none !important;
    margin-top: 0;
  }

  .navbar .dropdown-menu.fade-down {
    top: 80%;
    transform: none !important;
    transform-origin: 0% 0%;
  }

  .navbar .dropdown-menu.fade-up {
    top: 180%;
  }

  .navbar .nav-item:hover .dropdown-menu {
    opacity: 1;
    visibility: visible;
    top: 100%;
    font-size: calc(0.51rem + 0.55vw);
  }
}

.navbar-nav {
  font-style: normal;
  font-weight: 500;
  font-size: calc(0.51rem + 0.55vw);
  line-height: 20px;
}

.navbar-nav a {
  text-decoration: none !important;
}

.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .show>.nav-link,
.navbar-dark .navbar-nav .nav-link {
  color: #ffffff;
  border: 1px solid transparent;
}

.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:active,
.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:hover {
  color: #ffffff;
  background-color: #1b618e;
  border: 1px solid transparent;
  text-decoration: none;
}

section {
  position: relative;
}

.navbar-dark .navbar-toggler {
  color: #fff;
  border: none;
  border-color: transparent;
}

.hero-banner .container .row h1 {
  color: #0B9ACE;
  font-style: normal;
  font-weight: normal;
  font-size: 48px;
  line-height: 63px;
  letter-spacing: -0.045em;
}

.what-is-spark {
  font-style: normal;
  font-weight: normal;
  font-size: 17px;
  line-height: 24px;
}

.btn-cta {
  background: #F55B14;
  border-radius: 4px;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 23px;
  text-align: center;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #FFFFFF;
}

.btn-cta:hover {
  background: #CA4000;
  color: #ffffff;
  text-decoration: none;
}

.spark-star-bg {
  background: url(../images/spark-start.svg) no-repeat;
  width: 907.5px;
  height: 726px;
  position: absolute;
  right: 70px;
}

.apache-spark-motto {
  margin-top: 150px;
  position: relative;
  font-style: normal;
  font-weight: bold;
  font-size: calc(3.2rem + 3.3vw);
  line-height: 113px;
  letter-spacing: -0.05em;
  color: #8A8A8A;
}

@media screen and (min-width: 1900px) {
  .apache-spark-motto {
    font-size: 7.3rem;
  }
}

.features .title {
  margin-top: 24px;
  font-style: normal;
  font-weight: bold;
  font-size: 21px;
  line-height: 33px;
  color: #0B9ACE;
}

.features .details {
  color: #000000;
  margin-top: 20px;
  font-style: normal;
  font-weight: normal;
  font-size: 17px;
  line-height: 24px;
  margin-right: 20px;
}

.spark-run-now {
  background-color: #1D6890;
}

.spark-run-now nav {
  background-color: #1B4257;
  color: #ffffff;
}

.spark-run-now .nav-link:focus,
.nav-link:hover {
  color: #ffffff;
  border: 1px solid transparent;
}

.spark-run-now .nav-tabs .nav-item.show .nav-link,
.spark-run-now .nav-tabs .nav-link.active {
  color: #ffffff;
  background-color: #1d6890;
  border: none;
}

.spark-run-now .nav-tabs .nav-link:focus,
.spark-run-now .nav-tabs .nav-link:hover {
  outline: none;
  background-color: #1D6890;
  border: 1px solid transparent;
}

.spark-run-now .nav-link {
  color: #ffffff;
  border-radius: 0;
  padding: 10px;
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  line-height: 33px;
  text-align: center;
}

.spark-run-now .tab-content {
  color: #ffffff;
}

.spark-run-now .title {
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  line-height: 42px;
}

.spark-code {
  border-top: 2px solid #000000;
}

.examples {
  color: #666666;
  padding: 12px 0 0 0;
  background-color: #ffffff;
  border-radius: 10px;
}

.examples .nav-tabs {
  background-color: #F0F0F0;
}

.spark-run-now .examples .tab-content {
  color: #666666;
}

.spark-run-now .examples nav {
  border: 1px solid #000000;
}

.spark-run-now .examples .nav-link {
  padding: 6px 5px;
  border-right: 1px solid #000000;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 19px;
  color: #666666;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.spark-run-now .examples .nav-link:hover {
  color: #ffffff;
}

.window {
  height: 30px;
  padding: 0 10px;
}

.circle {
  border-radius: 50%;
  height: 17px;
  width: 17px;
  display: inline-block;
  margin: 2px;
}

.circle.red {
  background-color: #fb615a;
}

.circle.yellow {
  background-color: #fdbc40;
}

.circle.green {
  background-color: #3ec648;
}

.nav-tabs .nav-link {
  margin-bottom: 0;
}

.spark-run-now .examples .nav-tabs .nav-link:focus,
.spark-run-now .examples .nav-tabs .nav-link:hover,
.spark-run-now .examples .nav-tabs .nav-link:active {
  border-right: 1px solid;
}

.spark-run-now .examples .nav-tabs .nav-item.show .nav-link,
.spark-run-now .examples .nav-tabs .nav-link.active {
  border-right: 1px solid #666;
}

.btn {
  padding: 11px 23px 11px 23px;
}
/* ... */

